--- a/views/admin_dashboard.ejs
+++ b/views/admin_dashboard.ejs
@@ -91,7 +91,7 @@
         
         <% usersList.forEach(user => { %>
 
-            <a href="/user/<%=user.id %>" style="text-decoration: none; color: black;">
+            <a href="/user/data/<%=user.id %>" style="text-decoration: none; color: black;">
                 <div class="card col-12 mt-2">
                     <div class="card-body"><%=user.name%></div>
                 </div>
